# SFMLCmakeSetup

./: CMakeLists.txt  README.md
include/: errorReporting.h
resources/: License.txt
src/: main.cpp
